codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_renders_live_tail.snap
---
source: tui/src/pager_overlay.rs
expression: term.backend()
---
"/ T R A N S C R I P T / / / / / / / / / "
"alpha                                   "
"                                        "
"tail                                    "
"~                                       "
"~                                       "
"───────────────────────────────── 100% ─"
" ↑/↓ scroll · pgup/pgdn page · home/end "
" q quit · esc edit prev                 "
"                                        "
